--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <div class="home-contact">
                   <span class="home-text35">Contact Us</span>
                   <span class="home-text36">longaluminium10@gmail.com</span>
-                  <span>+84 947460159</span>
+                  <span>+84 lol</span>
                 </div>
                 <div class="home-socials">
                   <span class="home-text38">Follow Us</span>
